# cameracli

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  meson.build
src/: cameracli.cpp
subprojects/: ccap.wrap
